--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Gorbsnarkles Kissing Booth
+description: the end of all things good, and the second comeing of Smootch
